--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.vmforce.samples.service.singlemodule</groupId>
-	<artifactId>web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>web</name>
+	<name>sampleWebApp</name>
+	<artifactId>sampleWebApp</artifactId>
 	<packaging>war</packaging>
 
 	<properties>
