--- a/pom.xml
+++ b/pom.xml
@@ -243,13 +243,8 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.24</version>
-				<configuration>
-					<contextPath>/</contextPath>
-					<scanIntervalSeconds>5</scanIntervalSeconds>
-				</configuration>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
 			</plugin>
 
 			<plugin>
