--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,14 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.0</version>
 		</dependency>
+		
+		<!-- Optional dependency for spring-aop, if you start using any spring AOP functionality 
+		<dependency>
+		    <groupId>cglib</groupId>
+		    <artifactId>cglib-nodep</artifactId>
+		    <version>2.2</version>
+		</dependency>
+		-->
 
 	</dependencies>
 
